Fix missing margin on the status.

--- a/app/styles/components/status.scss
+++ b/app/styles/components/status.scss
@@ -1,5 +1,5 @@
 .status {
-	margin: -1em -1em 0 -1em;
+	margin: -1em -1em 1em -1em;
 	padding: .5em 1em;
 	border-bottom: solid 1px $macOS-border-color;
 
